[package]
name = "bevy_cuda"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { path = "../bevy" }
wgpu = "24.0.1"
wgpu-hal = "24.0.2"
ash = "0.38"
cudarc = { version = "0.13", features = ["cuda-11080"] }
pyo3 = { version = "0.24.0", features = ["auto-initialize", "abi3-py311"] }
windows = { version = "0.58.0", features = ["Win32_Security_Authorization", "Wdk", "Wdk_Foundation"] }
lazy_static = "1.5.0"